Correct definitions and improves